<resources>
    <string name="app_name">Isso-e-um-cururu</string>
    <string name="button_text">Clique aqui!</string>
    <string name="welcome_text">Olá! Seja bem vindo ao\n"Isso é um Cururu?"</string>
    <string name="app_description_text">Esse aplicativo foi criado para ajudar você a conhecer através de sons e imagens os anfíbios anuros do Parque Estadual Dois Irmãos - PEDI, com ênfase nas espécies com algum grau de ameaça à extinção, seu habitat, hábito, tamanho, distribuição geográfica e modo reprodutivo. Aproveite!</string>
    <string name="lets_begin_text">Vamos começar!</string>
    <string name="toolbar_pedi" translatable="false">PEDI</string>
    <string name="toolbar_leasons">Dicas para\nProfessores</string>
    <string name="toolbar_credits">Créditos</string>

    <string name="family_name_0" translatable="false">Bufonidae</string>
    <string name="family_name_1" translatable="false">Craugastoridae</string>
    <string name="family_name_2" translatable="false">Odontophrynidae</string>

    <string name="family_name_3" translatable="false">Leptodactylidae</string>
    <string name="family_name_4" translatable="false">Ranidae</string>
    <string name="family_name_5" translatable="false">Microhylidae</string>

    <string name="family_name_6" translatable="false">Hemiphractidae</string>
    <string name="family_name_7" translatable="false">Hylidae</string>
    <string name="family_name_8" translatable="false">Phyllomedusidae</string>
</resources>