<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_repeat"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:scaleType="fitCenter"

            android:src="@drawable/button_card_0"
            app:layout_constraintDimensionRatio="w,1:2"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="CARD_DA_FAMILIA" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <Button
                android:id="@+id/button_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_0"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_0"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_1"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_1"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_2"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_0"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_2"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_3"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_3"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_4"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_4"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_5"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_5"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_6"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_6"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_7"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_7"
                tools:visibility="visible" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background_normal"
                android:fontFamily="sans-serif"
                android:text="@string/family_name_8"
                android:textAllCaps="false"
                android:textColor="@color/fontColor_1"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:backgroundTint="@color/fam_8"
                tools:visibility="visible" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>