<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:background="@color/colorPrimaryDark">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/tb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_credits"
                android:textColor="@color/lightPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/tb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/toolbar_pedi"
                android:textColor="@color/lightPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tb3"
                app:layout_constraintStart_toEndOf="@+id/tb1"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/tb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/toolbar_leasons"
                android:textColor="@color/lightPrimary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:backgroundTint="@color/transparent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_launcher_background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_repeat">

            <ImageView
                android:id="@+id/cardLogo"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:padding="32dp"
                android:scaleType="fitCenter"

                android:src="@drawable/img_main"
                app:layout_constraintDimensionRatio="w,5:7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/wellcomeTexts"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="-24dp"
                android:orientation="vertical"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardLogo">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/welcome_text"
                    android:textColor="@color/lightPrimary"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/app_description_text"
                    android:textColor="@color/lightPrimary"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/lets_begin_text"
                    android:textColor="@color/lightPrimary"
                    android:textSize="24sp" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/imgButton0"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/transparent"
                android:paddingLeft="8dp"

                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/button_card_0"
                android:text=""

                app:layout_constraintDimensionRatio="w,1:2"
                app:layout_constraintEnd_toStartOf="@+id/cardLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/wellcomeTexts" />

            <ImageButton
                android:id="@+id/imgButton1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-24dp"
                android:background="@color/transparent"

                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/button_card_1"
                android:text=""


                app:layout_constraintDimensionRatio="w,1:2"
                app:layout_constraintEnd_toStartOf="@+id/cardLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgButton0" />

            <ImageButton
                android:id="@+id/imgButton2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-24dp"
                android:background="@color/transparent"

                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:scaleType="fitCenter"
                android:src="@drawable/button_card_2"
                android:text=""

                app:layout_constraintDimensionRatio="w,1:2"
                app:layout_constraintEnd_toStartOf="@+id/cardLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgButton1" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgButton2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>